# KGiG

./: Абрамова_Ульяна_Владимировна_М3102_Лаба1.docx  Абрамова_Ульяна_Владимировна_М3102_Лаба2.docx
Lab1.v3/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  convertions.cpp  convertions.h  main.cpp
